Changelog v5.2.42 (2025-08-25):
- Alot of Setting Fixes
- Added Widget Delay Setting
- Fixed Param error for Animetosho Scraping
- Fixed Touch Interaction with Calendar
- Fixed Widget error with Mal Menus
- Remove Old Deprecated Setting stuff

Changelog v5.2.41 (2025-08-13):
- Added Watch History
- Fixed Last Watched with Movies
- Fixed a few menu items
- Small Fix with Presets

Changelog v5.2.40 (2025-08-12):
- Added Two New Presets
- Updated database

Changelog v5.2.39 (2025-07-30):
- Updated embed extractor
- Updated database

Changelog v5.2.38 (2025-07-29):
- Fix Bug with Playlist
- Added Mapping to Database

Changelog v5.2.37 (2025-07-27):
- Fix Quick Setting Default

Changelog v5.2.36 (2025-07-27):
- Recoded Smart Skip
- Added Auto Skip Settings

Changelog v5.2.35 (2025-07-20):
- Updated embed extractor
- Fail gracefully when no sources are found

Changelog v5.2.34 (2025-07-16):
- Small fix with SmartPlay

Changelog v5.2.33 (2025-07-15):
- Added New Playback Option called SmartPlay
- Watchlist will now automatically update after auth
- Fixed Color bug with Anichart
- Fixed Paging for every menu that fixed the formats
- Fixed small String bugs

Changelog v5.2.32 (2025-07-09):
- Added Playback Context Menu in Playlist

Changelog v5.2.31 (2025-07-05):
- Fixed TorBox Links

Changelog v5.2.30 (2025-07-05):
- Added Tb Theme Support

Changelog v5.2.29 (2025-07-03):
- Added Subtitle Type Settings

Changelog v5.2.28 (2025-06-27):
- Updated embed extractor

Changelog v5.2.27 (2025-06-26):
- Added content-type if not present in response headers

Changelog v5.2.26 (2025-06-26):
- Fix MAL token refresh

Changelog v5.2.25 (2025-06-22):
- Updated embed extractor again

Changelog v5.2.24 (2025-06-18):
- Updated embed extractor

Changelog v5.2.23 (2025-06-11):
- Fixed Animixplay

Changelog v5.2.22 (2025-06-05):
- Fixed Marked as Watched Context for all Animes

Changelog v5.2.21 (2025-05-25):
- Fixed annoying bug with playing next